--- a/neighsecure/pubspec.yaml
+++ b/neighsecure/pubspec.yaml
@@ -35,6 +35,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
+  path: ^1.9.0
+  sqflite: ^2.3.3
+  path_provider: ^2.1.3
+  http: ^1.2.1
+  google_fonts: ^6.2.1
+  image_picker: ^1.1.0
+  intl: ^0.19.0
+  transparent_image: ^2.0.1
+  flutter_launcher_icons: ^0.13.1
+  uuid: ^4.4.0
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +63,11 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/cottage.png"
+
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -59,9 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/cottage.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
