--- a/neighsecure/pubspec.yaml
+++ b/neighsecure/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   uuid: ^4.4.0
   crypto: ^3.0.3
   qr_flutter: ^4.1.0
+  qr_code_scanner: ^1.0.1
 
 
 dev_dependencies:
@@ -60,7 +61,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
