:construction: Refactoring Components

--- a/neighsecure/pubspec.yaml
+++ b/neighsecure/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   day_picker: ^2.2.0
   syncfusion_flutter_datepicker: ^25.2.5
+  url_launcher: ^6.2.6
 
 
 
