--- a/neighsecure/pubspec.yaml
+++ b/neighsecure/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_secure_storage: ^9.2.2
   shared_preferences: ^2.2.3
+  connectivity_plus: ^6.0.3
 
 
 
